// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Swap/useGetSwapInfo exactAmountIn returns swap in correct format if a trade is found 1`] = `
Object {
  "error": undefined,
  "swap": Object {
    "direction": "exactAmountIn",
    "exchangeRate": "0.499248873309964947",
    "expectedToTokenAmountReceivedWei": "499248873309964947",
    "fromToken": Object {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "asset": "usdt.svg",
      "decimals": 6,
      "id": "usdt",
      "symbol": "USDT",
    },
    "fromTokenAmountSoldWei": "1000000",
    "minimumToTokenAmountReceivedWei": "496765048069616862",
    "routePath": Array [
      "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
    ],
    "toToken": Object {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "asset": "uni.svg",
      "decimals": 18,
      "id": "uni",
      "symbol": "UNI",
    },
  },
}
`;

exports[`pages/Swap/useGetSwapInfo exactAmountOut returns swap in correct format if a trade is found 1`] = `
Object {
  "error": undefined,
  "swap": Object {
    "direction": "exactAmountOut",
    "exchangeRate": "0.498499516455469038",
    "expectedFromTokenAmountSoldWei": "1003010",
    "fromToken": Object {
      "address": "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "asset": "usdt.svg",
      "decimals": 6,
      "id": "usdt",
      "symbol": "USDT",
    },
    "maximumFromTokenAmountSoldWei": "1008025",
    "routePath": Array [
      "0xcE546eE9E8Bc0732A1e0083ef578a19F79c73D74",
      "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
    ],
    "toToken": Object {
      "address": "0x651A2a9D3Fc81A5c95E8232d71a558FFd4111126",
      "asset": "uni.svg",
      "decimals": 18,
      "id": "uni",
      "symbol": "UNI",
    },
    "toTokenAmountReceivedWei": "500000000000000000",
  },
}
`;
